Spline optimizer with constraints

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -62,6 +62,7 @@ path-validations.cc
   path-optimization/gradient-based.cc #
   path-optimization/spline-gradient-based-abstract.cc #
   path-optimization/spline-gradient-based.cc #
+  path-optimization/spline-gradient-based-constraint.cc #
   path-optimization/partial-shortcut.cc #
   path-optimization/config-optimization.cc#
   path-optimization/simple-time-parameterization.cc#
